[gd_scene load_steps=13 format=3 uid="uid://cln2xesx2ugms"]

[ext_resource type="Script" path="res://User/user.gd" id="1_22sli"]
[ext_resource type="Texture2D" uid="uid://brgufd781s1l3" path="res://icon.svg" id="2_i0qud"]
[ext_resource type="Script" path="res://hitbox.gd" id="3_mip07"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_beusy"]
size = Vector2(120, 125)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_lcyq7"]
radius = 66.0
height = 132.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ojb2w"]
size = Vector2(252, 1229)

[sub_resource type="CircleShape2D" id="CircleShape2D_iakeo"]
radius = 142.088

[sub_resource type="Animation" id="Animation_6lsb1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("swordpivot/sword:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.174533]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("swordpivot/sword:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(24, 26)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("swordpivot:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.5708]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("swordpivot/sword:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("swordpivot/sword/CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("SlashTele:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("TelegraphSlash/CollisionShape2D:disabled")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("TelegraphSwirl/CollisionShape2D:disabled")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("SwirlTele:visible")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_671u1"]
resource_name = "slash"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("swordpivot/sword:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.174533]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("swordpivot/sword:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 1.7, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(24, 26), Vector2(-1.90735e-06, 41), Vector2(2.08165e-12, 41), Vector2(24, 26)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("swordpivot:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.8, 1, 1.3, 1.7),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [1.5708, 4.71239, 4.71239, 1.5708]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("swordpivot/sword:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.1, 0.7, 1.7, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1, -1), Vector2(1, -1), Vector2(1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("swordpivot/sword/CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.8, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("SlashTele:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/6/type = "method"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath(".")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0.8, 1),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"_startanim"
}, {
"args": [],
"method": &"flyingSlash"
}]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("TelegraphSlash/CollisionShape2D:disabled")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_xrms6"]
resource_name = "swirl"
length = 1.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("swordpivot/sword:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.174533]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("swordpivot/sword:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 1.4, 1.8),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(24, 26), Vector2(-1.90735e-06, 41), Vector2(2.08165e-12, 41), Vector2(24, 26)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("swordpivot:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.8, 1.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.5708, 7.85398]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("swordpivot/sword:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.1, 0.7, 1.4, 1.8),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1, -1), Vector2(1, -1), Vector2(1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("swordpivot/sword/CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.8, 1.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/5/type = "method"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath(".")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0.8),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_startanim"
}]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("TelegraphSwirl/CollisionShape2D:disabled")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("SwirlTele:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4do4c"]
_data = {
"RESET": SubResource("Animation_6lsb1"),
"slash": SubResource("Animation_671u1"),
"swirl": SubResource("Animation_xrms6")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_urgq3"]
size = Vector2(60, 61)

[node name="player" type="CharacterBody2D"]
script = ExtResource("1_22sli")

[node name="SlashTele" type="Polygon2D" parent="."]
color = Color(1, 0, 0, 0.431373)
polygon = PackedVector2Array(-120, -13, -101, -70, -65, -102, -28, -118, 16, -118, 50, -109, 78, -87, 98, -62, 115, -36, 124, -10, 123, -10, 31, -12, 31, -31, -34, -31, -34, -14)

[node name="SwirlTele" type="Polygon2D" parent="."]
color = Color(1, 0, 0, 0.333333)
polygon = PackedVector2Array(-140, 3, -134, -49, -112, -85, -72, -119, -28, -139, 12, -137, 62, -127, 100, -91, 128, -45, 132, -1, 122, 59, 92, 105, 48, 131, -14, 141, -76, 123, -108, 95, -132, 57)

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-6.10352e-05, -9.15527e-05)
scale = Vector2(0.5, 0.48)
texture = ExtResource("2_i0qud")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, -9.53674e-07)
scale = Vector2(0.5, 0.48)
shape = SubResource("RectangleShape2D_beusy")

[node name="swordpivot" type="Node2D" parent="."]
rotation = 1.5708

[node name="sword" type="CharacterBody2D" parent="swordpivot"]
position = Vector2(24, 26)
rotation = 0.174533
collision_layer = 16
collision_mask = 16
script = ExtResource("3_mip07")

[node name="Sprite2D" type="Sprite2D" parent="swordpivot/sword"]
position = Vector2(0, -28)
scale = Vector2(0.125, 0.9)
texture = ExtResource("2_i0qud")

[node name="CollisionShape2D" type="CollisionShape2D" parent="swordpivot/sword"]
position = Vector2(0, -28)
scale = Vector2(0.15, 0.9)
shape = SubResource("CapsuleShape2D_lcyq7")
one_way_collision = true

[node name="TelegraphSlash" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="TelegraphSlash"]
position = Vector2(2, -630.5)
shape = SubResource("RectangleShape2D_ojb2w")
disabled = true

[node name="TelegraphSwirl" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TelegraphSwirl"]
shape = SubResource("CircleShape2D_iakeo")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
speed_scale = 1.5
libraries = {
"": SubResource("AnimationLibrary_4do4c")
}

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(-2, 0.5)
shape = SubResource("RectangleShape2D_urgq3")

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(-4, -123)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ProgressBar" type="ProgressBar" parent="CanvasLayer"]
offset_left = 122.0
offset_top = 28.0
offset_right = 1006.0
offset_bottom = 69.0

[node name="DashTimer" type="Timer" parent="."]

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="area_exited" from="Hurtbox" to="." method="_on_hurtbox_area_exited"]
[connection signal="body_entered" from="Hurtbox" to="." method="_on_hurtbox_body_entered"]
[connection signal="timeout" from="DashTimer" to="." method="_on_dash_timer_timeout"]
